manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "azehmwcluster-1f98"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "azehmwcluster-1f98"
  template:
    metadata:
      labels:
        app: "azehmwcluster-1f98"
    spec:
      containers:
        - name: "azehmwcluster-1f98"
          image: "azehmwreg.azurecr.io/azehmwcluster"
          ports:
          - containerPort: 80
